--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,14 @@
             <artifactId>kafka-clients</artifactId>
             <version>2.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4jVersion}</version>
+        </dependency>
     </dependencies>
     <properties>
+        <slf4jVersion>1.6.1</slf4jVersion>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
